some random info to format the layout of the page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>admin-dashboard</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, optio.
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h1 class="header-logo">Dashboard</h1>
+      <ul>
+        <li class="side-content">Home</li>
+        <li class="side-content">Profile</li>
+        <li class="side-content">Messages</li>
+        <li class="side-content">History</li>
+        <li class="side-content">Tasks</li>
+        <li class="side-content">Communities</li>
+      </ul>
+      <ul>
+        <li class="bottom-side-content">Settings</li>
+        <li class="bottom-side-content">Support</li>
+        <li class="bottom-side-content">Privacy</li>
+      </ul>
+    </div>
+
+    <!-- Header -->
+    <div class="header">
+      <button type="submit">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </button>
+      <input type="text" />
+      <div class="top-right-corner">Morgan Oakley</div>
+    </div>
+
+    <!-- Projects -->
+    <div class="my-projects">
+      <div class="project">
+        <p class="title">First Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+      <div class="project">
+        <p class="title">Second Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+      <div class="project">
+        <p class="title">Third Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+      <div class="project">
+        <p class="title">Fourth Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+      <div class="project">
+        <p class="title">Fifth Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+      <div class="project">
+        <p class="title">Sixth Project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
+          cupiditate asperiores repellat laudantium explicabo.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
