added a lot of text, time to set up layout

--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
           cupiditate asperiores repellat laudantium explicabo.
         </p>
       </div>
+      <div class="top-right">
+        <div class="top-right-title">
+          <h3>Announcements</h3>
+          <div class="top-right-content">
+            <p class="title">Site Maintenance</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
+              aliquid?
+            </p>
+          </div>
+          <div class="top-right-content">
+            <p class="title">Community Share Day</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
+              aliquid?
+            </p>
+          </div>
+          <div class="top-right-content">
+            <p class="title">Updated Privacy Policy</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
+              aliquid?
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
