--- a/index.html
+++ b/index.html
@@ -13,77 +13,82 @@
     />
   </head>
   <body>
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <h1 class="header-logo">Dashboard</h1>
-      <ul>
-        <li class="side-content">Home</li>
-        <li class="side-content">Profile</li>
-        <li class="side-content">Messages</li>
-        <li class="side-content">History</li>
-        <li class="side-content">Tasks</li>
-        <li class="side-content">Communities</li>
-      </ul>
-      <ul>
-        <li class="bottom-side-content">Settings</li>
-        <li class="bottom-side-content">Support</li>
-        <li class="bottom-side-content">Privacy</li>
-      </ul>
-    </div>
+    <!-- Entire body in container -->
+    <div class="container">
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <h1 class="header-logo">Dashboard</h1>
+        <ul>
+          <li class="side-content">Home</li>
+          <li class="side-content">Profile</li>
+          <li class="side-content">Messages</li>
+          <li class="side-content">History</li>
+          <li class="side-content">Tasks</li>
+          <li class="side-content">Communities</li>
+        </ul>
+        <ul>
+          <li class="bottom-side-content">Settings</li>
+          <li class="bottom-side-content">Support</li>
+          <li class="bottom-side-content">Privacy</li>
+        </ul>
+      </div>
 
-    <!-- Header -->
-    <div class="header">
-      <button type="submit">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-      <input type="text" />
-      <div class="top-right-corner">Morgan Oakley</div>
-    </div>
+      <!-- Header -->
+      <div class="header">
+        <button type="submit">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+        <input type="text" />
+        <div class="top-right-corner">Morgan Oakley</div>
+      </div>
 
-    <!-- Projects -->
-    <div class="my-projects">
-      <div class="project">
-        <p class="title">First Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
+      <!-- Projects -->
+      <div class="my-projects">
+        <div class="project">
+          <p class="title">First Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Second Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Third Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Fourth Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Fifth Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Sixth Project</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+            tempore cupiditate asperiores repellat laudantium explicabo.
+          </p>
+        </div>
       </div>
-      <div class="project">
-        <p class="title">Second Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
-      </div>
-      <div class="project">
-        <p class="title">Third Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
-      </div>
-      <div class="project">
-        <p class="title">Fourth Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
-      </div>
-      <div class="project">
-        <p class="title">Fifth Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
-      </div>
-      <div class="project">
-        <p class="title">Sixth Project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, tempore
-          cupiditate asperiores repellat laudantium explicabo.
-        </p>
-      </div>
+
+      <!-- Announcements (top right of projects area) -->
       <div class="top-right">
         <div class="top-right-title">
           <h3>Announcements</h3>
@@ -107,6 +112,21 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
               aliquid?
             </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Trending (bottom right fo projects area) -->
+      <div class="bottom-right">
+        <div class="bottom-right-title">
+          <h3>Trending</h3>
+          <div class="bottom-right-content">
+            <ul>
+              <li>@tegen</li>
+              <li>@morgan</li>
+              <li>@kendall</li>
+              <li>@alex</li>
+            </ul>
           </div>
         </div>
       </div>
