sidebar layout coming together, the rest still needs a lot of work

--- a/index.html
+++ b/index.html
@@ -17,19 +17,38 @@
     <div class="container">
       <!-- Sidebar -->
       <div class="sidebar">
-        <h1 class="header-logo">Dashboard</h1>
+        <div class="header-logo">Dashboard</div>
         <ul>
-          <li class="side-content">Home</li>
-          <li class="side-content">Profile</li>
-          <li class="side-content">Messages</li>
-          <li class="side-content">History</li>
-          <li class="side-content">Tasks</li>
-          <li class="side-content">Communities</li>
+          <li class="side-content">
+            <i class="fa fa-home" aria-hidden="true"></i>Home
+          </li>
+
+          <li class="side-content">
+            <i class="fa fa-user" aria-hidden="true"></i>Profile
+          </li>
+          <li class="side-content">
+            <i class="fa fa-comment-o" aria-hidden="true"></i>Messages
+          </li>
+          <li class="side-content">
+            <i class="fa fa-history" aria-hidden="true"></i>History
+          </li>
+          <li class="side-content">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Tasks
+          </li>
+          <li class="side-content">
+            <i class="fa fa-users" aria-hidden="true"></i>Communities
+          </li>
         </ul>
         <ul>
-          <li class="bottom-side-content">Settings</li>
-          <li class="bottom-side-content">Support</li>
-          <li class="bottom-side-content">Privacy</li>
+          <li class="bottom-side-content">
+            <i class="fa fa-cog" aria-hidden="true"></i>Settings
+          </li>
+          <li class="bottom-side-content">
+            <i class="fa fa-question-circle" aria-hidden="true"></i>Support
+          </li>
+          <li class="bottom-side-content">
+            <i class="fa fa-shield" aria-hidden="true"></i>Privacy
+          </li>
         </ul>
       </div>
 
