main section all messed up, need to restart draw out a plan and follow that plan.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
       </div>
 
       <!-- Projects -->
+
       <div class="my-projects">
+        <!-- My Projects -->
         <div class="project">
           <p class="title">First Project</p>
           <p>
@@ -105,50 +107,52 @@
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
+        <div class="main-section">
+          <div class="top-right">
+            <!-- <h3>Announcements</h3> -->
+            <div class="top-right-title">
+              <div class="top-right-content">
+                <p class="title">Site Maintenance</p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Veniam, aliquid?
+                </p>
+              </div>
+              <div class="top-right-content">
+                <p class="title">Community Share Day</p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Veniam, aliquid?
+                </p>
+              </div>
+              <div class="top-right-content">
+                <p class="title">Updated Privacy Policy</p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Veniam, aliquid?
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Trending (bottom right fo projects area) -->
+          <div class="bottom-right">
+            <!-- <h3>Trending</h3> -->
+            <div class="bottom-right-title">
+              <div class="bottom-right-content">
+                <ul>
+                  <li>@tegen</li>
+                  <li>@morgan</li>
+                  <li>@kendall</li>
+                  <li>@alex</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Announcements (top right of projects area) -->
-      <div class="top-right">
-        <div class="top-right-title">
-          <h3>Announcements</h3>
-          <div class="top-right-content">
-            <p class="title">Site Maintenance</p>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
-              aliquid?
-            </p>
-          </div>
-          <div class="top-right-content">
-            <p class="title">Community Share Day</p>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
-              aliquid?
-            </p>
-          </div>
-          <div class="top-right-content">
-            <p class="title">Updated Privacy Policy</p>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
-              aliquid?
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Trending (bottom right fo projects area) -->
-      <div class="bottom-right">
-        <div class="bottom-right-title">
-          <h3>Trending</h3>
-          <div class="bottom-right-content">
-            <ul>
-              <li>@tegen</li>
-              <li>@morgan</li>
-              <li>@kendall</li>
-              <li>@alex</li>
-            </ul>
-          </div>
-        </div>
-      </div>
     </div>
   </body>
 </html>
