finally made projects lay out as example, now to fix top bar and then colors and design

--- a/index.html
+++ b/index.html
@@ -66,88 +66,87 @@
 
       <div class="my-projects">
         <!-- My Projects -->
-        <div class="project">
+        <div class="project p1">
           <p class="title">First Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="project">
+        <div class="project p2">
           <p class="title">Second Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="project">
+        <div class="project p3">
           <p class="title">Third Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="project">
+        <div class="project p4">
           <p class="title">Fourth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="project">
+        <div class="project p5">
           <p class="title">Fifth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="project">
+        <div class="project p6">
           <p class="title">Sixth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
         </div>
-        <div class="main-section">
-          <div class="top-right">
-            <!-- <h3>Announcements</h3> -->
-            <div class="top-right-title">
-              <div class="top-right-content">
-                <p class="title">Site Maintenance</p>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Veniam, aliquid?
-                </p>
-              </div>
-              <div class="top-right-content">
-                <p class="title">Community Share Day</p>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Veniam, aliquid?
-                </p>
-              </div>
-              <div class="top-right-content">
-                <p class="title">Updated Privacy Policy</p>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Veniam, aliquid?
-                </p>
-              </div>
+
+        <div class="top-right">
+          <!-- <h3>Announcements</h3> -->
+          <div class="top-right-title">
+            <div class="top-right-content">
+              <p class="title">Site Maintenance</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Veniam, aliquid?
+              </p>
+            </div>
+            <div class="top-right-content">
+              <p class="title">Community Share Day</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Veniam, aliquid?
+              </p>
+            </div>
+            <div class="top-right-content">
+              <p class="title">Updated Privacy Policy</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Veniam, aliquid?
+              </p>
             </div>
           </div>
+        </div>
 
-          <!-- Trending (bottom right fo projects area) -->
-          <div class="bottom-right">
-            <!-- <h3>Trending</h3> -->
-            <div class="bottom-right-title">
-              <div class="bottom-right-content">
-                <ul>
-                  <li>@tegen</li>
-                  <li>@morgan</li>
-                  <li>@kendall</li>
-                  <li>@alex</li>
-                </ul>
-              </div>
+        <!-- Trending (bottom right fo projects area) -->
+        <div class="bottom-right">
+          <!-- <h3>Trending</h3> -->
+          <div class="bottom-right-title">
+            <div class="bottom-right-content">
+              <ul>
+                <li>@tegen</li>
+                <li>@morgan</li>
+                <li>@kendall</li>
+                <li>@alex</li>
+              </ul>
             </div>
           </div>
         </div>
