added boxes to make visual easier on the eyes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </p>
         </div>
 
-        <div class="top-right">
+        <div class="top-right project">
           <!-- <h3>Announcements</h3> -->
           <div class="top-right-title">
             <div class="top-right-content">
@@ -137,7 +137,7 @@
         </div>
 
         <!-- Trending (bottom right fo projects area) -->
-        <div class="bottom-right">
+        <div class="bottom-right project">
           <!-- <h3>Trending</h3> -->
           <div class="bottom-right-title">
             <div class="bottom-right-content">
