changed background color of main content, working on header

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
       <!-- Header -->
       <div class="header">
-        <button type="submit">
+        <button type="submit" class="search-btn top">
           <i class="fa fa-search" aria-hidden="true"></i>
         </button>
-        <input type="text" />
-        <div class="top-right-corner">Morgan Oakley</div>
+        <input type="text" class="top" />
+        <div class="top-right-corner top">Morgan Oakley</div>
       </div>
 
       <!-- Projects -->
