search bar designed

--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
 
       <!-- Header -->
       <div class="header">
-        <button type="submit" class="search-btn top">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </button>
-        <input type="text" class="top" />
+        <div class="textsearch">
+          <button type="submit" class="search-btn top">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
+          <input type="text" class="top text" />
+        </div>
+
         <div class="top-right-corner top">Morgan Oakley</div>
       </div>
 
