working on top right of top grid section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
           <input type="text" class="top text" />
         </div>
 
-        <div class="top-right-corner top">Morgan Oakley</div>
+        <div class="top-right-corner top">
+          <i class="fa fa-bell"></i>
+          <p>Morgan Oakley</p>
+        </div>
       </div>
 
       <!-- Projects -->
