added logo image to top right corner of project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
         <div class="top-right-corner top">
           <i class="fa fa-bell"></i>
+          <img src="images/logo.jpg" alt="Thumbs up" class="thumb" />
           <p>Morgan Oakley</p>
         </div>
       </div>
