added logo in both spots like example

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb" />
           <p>Morgan Oakley</p>
         </div>
+        <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
       </div>
 
       <!-- Projects -->
