adding text bottom row title

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb" />
           <p>Morgan Oakley</p>
         </div>
-        <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
+        <div class="bottom-left">
+          <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
+          <p>Hi there,</p>
+        </div>
       </div>
 
       <!-- Projects -->
