bottom row of header data added now need design

--- a/index.html
+++ b/index.html
@@ -67,9 +67,17 @@
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb" />
           <p>Morgan Oakley</p>
         </div>
+
+        <div class="bottom-row"></div>
         <div class="bottom-left">
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
-          <p>Hi there,</p>
+          <p class="p-above">Hi there,</p>
+          <p class="p-below">Jean-Marc (@jaym9000)</p>
+        </div>
+        <div class="bottom-right">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
         </div>
       </div>
 
