--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
           <p>Morgan Oakley</p>
         </div>
 
-        <div class="bottom-left bottom">
+        <div class="bottom-left bottom-header">
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
           <p class="p-above">Hi there,</p>
           <p class="p-below">Jean-Marc (@jaym9000)</p>
         </div>
-        <div class="bottom-right bottom">
+        <div class="bottom-right bottom-header">
           <button>New</button>
           <button>Upload</button>
           <button>Share</button>
