--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
 
         <div class="bottom-left bottom-header">
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
-          <p class="p-above">Hi there,</p>
-          <p class="p-below">Jean-Marc (@jaym9000)</p>
+          <p class="p-above p-text">Hi there,</p>
+          <p class="p-below p-text">Jean-Marc (@jaym9000)</p>
         </div>
-        <div class="bottom-right bottom-header">
+
+        <div class="top-buttons">
           <button>New</button>
           <button>Upload</button>
           <button>Share</button>
