buttons done in header

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         </div>
 
         <div class="top-buttons">
-          <button>New</button>
-          <button>Upload</button>
-          <button>Share</button>
+          <button class="header-button-right">New</button>
+          <button class="header-button-right">Upload</button>
+          <button class="header-button-right">Share</button>
         </div>
       </div>
 
