dashboard logo added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <div class="container">
       <!-- Sidebar -->
       <div class="sidebar">
-        <div class="header-logo">Dashboard</div>
+        <div class="header-logo">
+          <img
+            src="images/dashboard.png"
+            alt="dashboard"
+            class="dash"
+          />Dashboard
+        </div>
+
         <ul>
           <li class="side-content">
             <i class="fa fa-home" aria-hidden="true"></i>Home
