last touches on header

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="bottom-left bottom-header">
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
           <p class="p-above p-text">Hi there,</p>
-          <p class="p-below p-text">Jean-Marc (@jaym9000)</p>
+          <div class="bottom-left">
+            <p class="p-below p-text">Jean-Marc (@jaym9000)</p>
+          </div>
         </div>
 
         <div class="top-buttons">
