--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
 
         <div class="bottom-left bottom-header">
           <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
-          <!-- <p class="p-above p-text">Hi there,</p> -->
-          <!-- <p class="p-below p-text">Jean-Marc (@jaym9000)</p> -->
           <div class="bottom-left multiline">
-            Hi there, <br />
-            Jean-Marc (@jaym9000)
+            <p class="bottom-left-top">Hi there,</p>
+            <p class="bottom-left-bottom">Jean-Marc (@jaym9000)</p>
           </div>
         </div>
 
