added logo and changed search bar size

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
         <div class="top-right-corner top">
           <i class="fa fa-bell"></i>
-          <img src="images/logo.jpg" alt="Thumbs up" class="thumb" />
-          <p>Morgan Oakley</p>
+          <img src="images/avatar.png" alt="GitHub Avatar" class="git" />
+          <p class="top-right-name">Jean-Marc</p>
         </div>
 
         <div class="bottom-left bottom-header">
-          <img src="images/logo.jpg" alt="Thumbs up" class="thumb-below" />
+          <img src="images/avatar.png" alt="GitHub Avatar" class="git-below" />
           <div class="bottom-left multiline">
             <p class="bottom-left-top">Hi there,</p>
             <p class="bottom-left-bottom">Jean-Marc (@jaym9000)</p>
