added icons in project and updated the sizes

--- a/index.html
+++ b/index.html
@@ -94,52 +94,82 @@
 
       <div class="my-projects">
         <!-- My Projects -->
-        <div class="project p1">
+        <div class="project p1 all-cards">
           <p class="title">First Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
-        <div class="project p2">
+        <div class="project p2 all-cards">
           <p class="title">Second Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
-        <div class="project p3">
+        <div class="project p3 all-cards">
           <p class="title">Third Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
-        <div class="project p4">
+        <div class="project p4 all-cards">
           <p class="title">Fourth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
-        <div class="project p5">
+        <div class="project p5 all-cards">
           <p class="title">Fifth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
-        <div class="project p6">
+        <div class="project p6 all-cards">
           <p class="title">Sixth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
             tempore cupiditate asperiores repellat laudantium explicabo.
           </p>
+          <div class="card-images">
+            <img src="images/star.png" alt="star-plus" class="star card-icon" />
+            <img src="images/eye.png" alt="eye-plus" class="eye card-icon" />
+            <img src="images/share.png" alt="share" class="share card-icon" />
+          </div>
         </div>
 
         <div class="top-right project">
           <!-- <h3>Announcements</h3> -->
-          <div class="top-right-title">
+          <div class="top-right-title all-cards">
             <div class="top-right-content">
               <p class="title">Site Maintenance</p>
               <p>
@@ -165,7 +195,7 @@
         </div>
 
         <!-- Trending (bottom right fo projects area) -->
-        <div class="bottom-right project">
+        <div class="bottom-right project all-cards">
           <!-- <h3>Trending</h3> -->
           <div class="bottom-right-title">
             <div class="bottom-right-content">
