done everything, just add some titles in project section and fix announcement and trending section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="my-projects">
         <!-- My Projects -->
-        <div class="project p1 all-cards">
+        <div class="project proj-only p1 all-cards">
           <p class="title">First Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
@@ -106,7 +106,7 @@
             <img src="images/share.png" alt="share" class="share card-icon" />
           </div>
         </div>
-        <div class="project p2 all-cards">
+        <div class="project proj-only p2 all-cards">
           <p class="title">Second Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
@@ -118,7 +118,7 @@
             <img src="images/share.png" alt="share" class="share card-icon" />
           </div>
         </div>
-        <div class="project p3 all-cards">
+        <div class="project proj-only p3 all-cards">
           <p class="title">Third Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
@@ -130,7 +130,7 @@
             <img src="images/share.png" alt="share" class="share card-icon" />
           </div>
         </div>
-        <div class="project p4 all-cards">
+        <div class="project proj-only p4 all-cards">
           <p class="title">Fourth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
@@ -142,7 +142,7 @@
             <img src="images/share.png" alt="share" class="share card-icon" />
           </div>
         </div>
-        <div class="project p5 all-cards">
+        <div class="project proj-only p5 all-cards">
           <p class="title">Fifth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
@@ -154,7 +154,7 @@
             <img src="images/share.png" alt="share" class="share card-icon" />
           </div>
         </div>
-        <div class="project p6 all-cards">
+        <div class="project proj-only p6 all-cards">
           <p class="title">Sixth Project</p>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
