announcements done just needs titles in main section and trending section worked on

--- a/index.html
+++ b/index.html
@@ -172,20 +172,23 @@
           <div class="top-right-title all-cards">
             <div class="top-right-content">
               <p class="title">Site Maintenance</p>
-              <p>
+              <p class="space-bottom">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Veniam, aliquid?
               </p>
             </div>
+            <!-- hr creates line -->
+            <hr />
             <div class="top-right-content">
-              <p class="title">Community Share Day</p>
-              <p>
+              <p class="title space-top">Community Share Day</p>
+              <p class="space-bottom">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Veniam, aliquid?
               </p>
             </div>
+            <hr />
             <div class="top-right-content">
-              <p class="title">Updated Privacy Policy</p>
+              <p class="title space-top">Updated Privacy Policy</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Veniam, aliquid?
