trending almost done just need icons

--- a/index.html
+++ b/index.html
@@ -203,10 +203,22 @@
           <div class="bottom-right-title">
             <div class="bottom-right-content">
               <ul>
-                <li>@tegen</li>
-                <li>@morgan</li>
-                <li>@kendall</li>
-                <li>@alex</li>
+                <div class="same-line">
+                  <p class="at">@tegen</p>
+                  World Peace Builder
+                </div>
+                <div class="same-line">
+                  <p class="at">@morgan</p>
+                  Super Cool Project
+                </div>
+                <div class="same-line">
+                  <p class="at">@kendall</p>
+                  Life Changing App
+                </div>
+                <div class="same-line">
+                  <p class="at">@alex</p>
+                  No Traffic Maker
+                </div>
               </ul>
             </div>
           </div>
