icones added just need to format properly

--- a/index.html
+++ b/index.html
@@ -204,18 +204,38 @@
             <div class="bottom-right-content">
               <ul>
                 <div class="same-line">
+                  <img
+                    src="images/penguin.png"
+                    alt="penguin"
+                    class="animal-icons"
+                  />
                   <p class="at">@tegen</p>
                   World Peace Builder
                 </div>
                 <div class="same-line">
+                  <img
+                    src="images/ladybug.png"
+                    alt="ladybug"
+                    class="animal-icons"
+                  />
                   <p class="at">@morgan</p>
                   Super Cool Project
                 </div>
                 <div class="same-line">
+                  <img
+                    src="images/orangutang.png"
+                    alt="orangutang"
+                    class="animal-icons"
+                  />
                   <p class="at">@kendall</p>
                   Life Changing App
                 </div>
                 <div class="same-line">
+                  <img
+                    src="images/jaguar.png"
+                    alt="jaguar"
+                    class="animal-icons"
+                  />
                   <p class="at">@alex</p>
                   No Traffic Maker
                 </div>
