done, just need to add titles

--- a/index.html
+++ b/index.html
@@ -202,44 +202,50 @@
           <!-- <h3>Trending</h3> -->
           <div class="bottom-right-title">
             <div class="bottom-right-content">
-              <ul>
-                <div class="same-line">
-                  <img
-                    src="images/penguin.png"
-                    alt="penguin"
-                    class="animal-icons"
-                  />
+              <div class="same-line">
+                <img
+                  src="images/penguin.png"
+                  alt="penguin"
+                  class="animal-icons"
+                />
+                <div class="right-of-image">
                   <p class="at">@tegen</p>
                   World Peace Builder
                 </div>
-                <div class="same-line">
-                  <img
-                    src="images/ladybug.png"
-                    alt="ladybug"
-                    class="animal-icons"
-                  />
+              </div>
+              <div class="same-line">
+                <img
+                  src="images/ladybug.png"
+                  alt="ladybug"
+                  class="animal-icons"
+                />
+                <div class="right-of-image">
                   <p class="at">@morgan</p>
                   Super Cool Project
                 </div>
-                <div class="same-line">
-                  <img
-                    src="images/orangutang.png"
-                    alt="orangutang"
-                    class="animal-icons"
-                  />
+              </div>
+              <div class="same-line">
+                <img
+                  src="images/orangutang.png"
+                  alt="orangutang"
+                  class="animal-icons"
+                />
+                <div class="right-of-image">
                   <p class="at">@kendall</p>
                   Life Changing App
                 </div>
-                <div class="same-line">
-                  <img
-                    src="images/jaguar.png"
-                    alt="jaguar"
-                    class="animal-icons"
-                  />
+              </div>
+              <div class="same-line">
+                <img
+                  src="images/jaguar.png"
+                  alt="jaguar"
+                  class="animal-icons"
+                />
+                <div class="right-of-image">
                   <p class="at">@alex</p>
                   No Traffic Maker
                 </div>
-              </ul>
+              </div>
             </div>
           </div>
         </div>
