--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
       <div class="my-projects">
         <!-- My Projects -->
+        <div class="big-title"><h3>Your Projects</h3></div>
         <div class="project proj-only p1 all-cards">
           <p class="title">First Project</p>
           <p>
@@ -168,7 +169,7 @@
         </div>
 
         <div class="top-right project">
-          <!-- <h3>Announcements</h3> -->
+          <div class="big-title"><h3>Announcements</h3></div>
           <div class="top-right-title all-cards">
             <div class="top-right-content">
               <p class="title">Site Maintenance</p>
@@ -199,7 +200,7 @@
 
         <!-- Trending (bottom right fo projects area) -->
         <div class="bottom-right project all-cards">
-          <!-- <h3>Trending</h3> -->
+          <div class="big-title-trending"><h3>Trending</h3></div>
           <div class="bottom-right-title">
             <div class="bottom-right-content">
               <div class="same-line">
